2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b126

	* Change:  More typos thanks to h0bbel.  This version bump
		includes several commits from earlier today.
		
	* Bugfix: Moved code for defining $webserver_user from 
		setup/index.php to setup/config_data.inc. 
		$webserver_user is only used in config_data.inc 
		and previously $webserver_user was undefined at
		execution time in config_data.inc

2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b125

	* Change: Fixed various typos in the config wizard that h0bbel found
		including switching examples from foo.com to example.com


2004-03-18  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b124

	* Change: Make the low-tech slideshow behave the same as the high.
	  A slideshow_length of 0 means "display all."  This difference
	  caused some confusion, because the high-tech worked and the low
	  didn't.

2004-03-18 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b123

	* Bugfix: removed Debug Code.
	  	  Thanks to Chris Kelly for catching this.

	* Change: getEnvLang() returns now NULL instead of FALSE 
		  when gallery couldnt detect language of environment.

2004-03-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b122

	* Grammatical changes to a couple of text strings

	* Fixed Bug #915821: Image deletion from view_photo.php was sometimes
	  linking back either to a sub-album (error) or to a photo with an
	  out-of-bounds index (error).

2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b121

	* Change: dos2unix'ed .php files gallery mainfolder.

2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b120

	* Bugfix: Slideshow was broken when using UTF-8 Charsets in PHP >=4.3.0
	  Thanks to Shai for reporting this.

2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b119

	* Change: - Added posibility to translate manual entered custom Fields. (translateableFields)
		  - Moved function automaticFieldsList() into lib/lang.php

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b118
