@@ -1,3 +1,9 @@
+2004-03-20  Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b127
+
+	* Change: RFE [ 879339 ] Import image title/description by CSV file
+	* Change: Added ability to caption new images based on file datestamps
+		Forum topic: Large Imports use file time/date for description
+
 2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b126
 
 	* Change:  More typos thanks to h0bbel.  This version bump
